# new-index-info

./: .gitignore  DEPLOY_README.md  README.md  output.txt  pyproject.toml  requirements.txt  run.bat  setup.bat
backend/a_stock_service/: Dockerfile  config.py  main.py  requirements.txt
backend/a_stock_service/models/: __init__.py
backend/a_stock_service/services/: __init__.py  fetcher.py  formatter.py  processor.py
backend/gateway/: Dockerfile  config.py  main.py  requirements.txt
backend/gateway/utils/: __init__.py  logger.py
backend/hk_stock_service/: Dockerfile  config.py  main.py  requirements.txt
backend/hk_stock_service/models/: __init__.py
backend/hk_stock_service/services/: __init__.py  fetcher.py  formatter.py  processor.py
deploy/: main_simple.py  models.py  requirements.txt  services.py
deploy/Amarket/: main_simple.py  models.py  services.py
deploy/Hmarket/: hk_main.py  hk_models.py  hk_services.py
discuss/: 港股新股功能设计.md  设计文档.md
docker/: .env.example  docker-compose.yml
docs/: API接口文档.md  FASTAPI_DEPLOYMENT.md  技术设计文档.md  数据字典.md  文档索引.md  需求文档.md
scripts/: build.sh  hk_run.bat  hk_run.sh  install_deps.bat  run.bat  run.sh  start.sh  stop.sh  test.bat  test_api.bat  test_api.sh  test_services.bat  test_services.py
