[project]
name = "new-index-info"
version = "0.1.0"
description = "新股发行信息获取系统 - 获取未来10天内沪深两市新股发行信息并输出为 Markdown 格式"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.80",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
